ie8/ie8compat issue circle cutoff fix

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -709,7 +709,7 @@ img {
 	background-attachment: scroll;
 	*/
 }
-.onMobile .insight.open {
+.onMobile .insight-wrapper.open {
 	background-color: #e5e5e5 !important;
 }
 .onMobile .insight {
